# simfony

./: .gitignore  404.html  CHANGELOG.md  CNAME  Cargo.toml  README.md  add_with_builtins.txt  assertr.txt  clippy.toml  flake.nix  function.html  index.html  justfile  let_statement.html  match_expression.html  nesting.txt  print.html  program.html  scopes.txt  searchindex.js  searchindex.json  test.txt  test.witness  test2.txt  type.html  type_alias.html  type_casting.html
.github/workflows/: book.yml  test.yml
bitcoind-tests/: Cargo.toml  elementsd-simplicity.nix  shell.nix
bitcoind-tests/tests/: spend_utxo.rs  test_arith.rs
bitcoind-tests/tests/common/: daemon.rs  mod.rs  test.rs  util.rs
bitcoind-tests/tests/setup/: mod.rs  test_util.rs
book/: book.toml
book/src/: SUMMARY.md  function.md  introduction.md  let_statement.md  match_expression.md  program.md  type.md  type_alias.md  type_casting.md
codegen/: Cargo.toml
codegen/src/: jet.rs  main.rs
doc/: context.md  environment.md  experimental-syntax.md  s-lang-syntax.md  simp-lang-syntax.md  syntax.md  translation.md
example_progs/: add.simf  add.simpl  array.simf  array.simpl  assertr.simpl  bip340.simf  bip340.simpl  cat.simf  cat.simpl  checksigfromstackverify.simf  checksigfromstackverify.simpl  closure.simpl  ctv.simf  ctv.simpl  deterministicrandom.simpl  function.simf  list.simf  list.simpl  list_fold.simf  match.simf  match.simpl  nesting.simf  option.simf  panic.simf  recursive-covenant.simf  recursive-covenant.simpl  scopes.simf  sighash_all.simf  sighash_all_anyonecanpay.simpl  sighash_all_anyprevout.simf.wip  sighash_all_anyprevout.simpl  sighash_all_anyprevoutanyscript.simf  sighash_all_anyprevoutanyscript.simpl  sighash_all_anyprevoutanyscript.wit  sighash_none.simf  sighash_none.simpl  sighash_none.wit  sighash_none_anyonecanpay.simf.wip  sighash_none_anyonecanpay.simpl  sighash_single.simpl  (+7 more)
examples/: checksigfromstackverify.wit  escrow_with_delay.simf  escrow_with_delay.timeout.wit  hash_loop.simf  hodl_vault.simf  hodl_vault.wit  htlc.complete.wit  htlc.simf  last_will.inherit.wit  last_will.simf  non_interactive_fee_bump.simf  non_interactive_fee_bump.wit  p2ms.simf  p2ms.wit  p2pk.args  p2pk.simf  p2pk.wit  p2pkh.simf  p2pkh.wit  presigned_vault.complete.wit  presigned_vault.simf  reveal_collision.simf  reveal_fix_point.simf  sighash_all_anyonecanpay.simf  sighash_all_anyonecanpay.wit  sighash_all_anyprevout.simf  sighash_all_anyprevout.wit  sighash_all_anyprevoutanyscript.simf  sighash_all_anyprevoutanyscript.wit  sighash_none.simf  sighash_none.wit  sighash_single.simf  sighash_single.wit  transfer_with_timeout.simf  transfer_with_timeout.transfer.wit
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: compile_parse_tree.rs  compile_text.rs  display_parse_tree.rs  parse_value_rtt.rs  parse_witness_json_rtt.rs  parse_witness_module_rtt.rs  parse_witness_rtt.rs  reconstruct_value.rs
src/: array.rs  ast.rs  compile.rs  debug.rs  dummy_env.rs  error.rs  ident.pest  jet.rs  lib.rs  main.rs  minimal.pest  named.rs  num.rs  parse.rs  pattern.rs  scope.rs  serde.rs  simpl.pest  str.rs  test.pest  types.rs  util.rs  value.rs  witness.rs
vscode/: LICENSE  README.md  language-configuration.json  package-lock.json  package.json
vscode/syntaxes/: simfony.tmLanguage.json
