[package]
name = "simfony"
version = "0.1.0"
authors = ["sanket1729 <sanket1729@gmail.com>"]
license = "CC0-1.0"
homepage = "https://github.com/BlockstreamResearch/simfony/"
repository = "https://github.com/BlockstreamResearch/simfony/"
description = "Rust-like language that compiles to Simplicity bytecode."
edition = "2021"
rust-version = "1.78.0"

[lib]
name = "simfony"
path = "src/lib.rs"

[[bin]]
name = "simc"
path = "src/main.rs"

[features]
serde = ["dep:serde", "dep:serde_json"]

[dependencies]
base64 = "0.21.2"
pest = "2.1.3"
pest_derive = "2.7.1"
serde = { version = "1.0.188", features = ["derive"], optional = true }
serde_json = { version = "1.0.105", optional = true }
miniscript = "12.3.1"
simplicity-lang = { git = "https://github.com/BlockstreamResearch/rust-simplicity", rev = "5c3ff26cd6311c438b13513c2af81f4d88de4901", features = ["test-utils"]}
either = "1.12.0"
itertools = "0.13.0"
arbitrary = { version = "1", optional = true, features = ["derive"] }

[target.wasm32-unknown-unknown.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[workspace]
members = ["codegen"]
exclude = ["fuzz", "bitcoind-tests"]
