[package]
name = "simfony"
version = "0.1.0"
authors = ["sanket1729 <sanket1729@gmail.com>"]
license = "CC0-1.0"
homepage = "https://github.com/BlockstreamResearch/simfony/"
repository = "https://github.com/BlockstreamResearch/simfony/"
description = "Rust-like language that compiles to Simplicity bytecode."
edition = "2021"
rust-version = "1.78.0"

[lib]
name = "simfony"
path = "src/lib.rs"

[[bin]]
name = "simc"
path = "src/main.rs"

[features]
serde = ["dep:serde", "dep:serde_json"]

[dependencies]
base64 = "0.21.2"
pest = "2.1.3"
pest_derive = "2.7.1"
serde = { version = "1.0.188", features = ["derive"], optional = true }
serde_json = { version = "1.0.105", optional = true }
simplicity-lang = { version = "0.4.0" }
miniscript = "12.3.1"
either = "1.12.0"
itertools = "0.13.0"
arbitrary = { version = "1", optional = true, features = ["derive"] }

[target.wasm32-unknown-unknown.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[workspace]
members = ["codegen"]
exclude = ["fuzz", "bitcoind-tests"]

[lints.clippy]
# Exclude lints we don't think are valuable.
large_enum_variant = "allow" # docs say "measure before paying attention to this"; why is it on by default??
similar_names = "allow" # Too many (subjectively) false positives.
uninlined_format_args = "allow" # This is a subjective style choice.
match_bool = "allow" # Adds extra indentation and LOC.
match_same_arms = "allow" # Collapses things that are conceptually unrelated to each other.
must_use_candidate = "allow" # Useful for audit but many false positives.
# Whitelist the cast lints because sometimes casts are unavoidable. But
# every cast should contain a code comment!
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_sign_loss = "allow"
# Exhaustive list of pedantic clippy lints
assigning_clones = "allow"
bool_to_int_with_if = "allow"
borrow_as_ptr = "allow"
case_sensitive_file_extension_comparisons = "allow"
cast_lossless = "allow"
cast_precision_loss = "allow"
cast_ptr_alignment = "allow"
checked_conversions = "allow"
cloned_instead_of_copied = "allow"
copy_iterator = "allow"
default_trait_access = "allow"
doc_link_with_quotes = "allow"
doc_markdown = "allow"
empty_enum = "allow"
enum_glob_use = "allow"
expl_impl_clone_on_copy = "allow"
explicit_deref_methods = "allow"
explicit_into_iter_loop = "allow"
explicit_iter_loop = "allow"
filter_map_next = "allow"
flat_map_option = "allow"
float_cmp = "allow"
fn_params_excessive_bools = "allow"
from_iter_instead_of_collect = "allow"
if_not_else = "allow"
ignored_unit_patterns = "allow"
implicit_clone = "allow"
implicit_hasher = "allow"
inconsistent_struct_constructor = "allow"
index_refutable_slice = "allow"
inefficient_to_string = "allow"
inline_always = "allow"
into_iter_without_iter = "allow"
invalid_upcast_comparisons = "allow"
items_after_statements = "allow"
iter_filter_is_ok = "allow"
iter_filter_is_some = "allow"
iter_not_returning_iterator = "allow"
iter_without_into_iter = "allow"
large_digit_groups = "allow"
large_futures = "allow"
large_stack_arrays = "allow"
large_types_passed_by_value = "allow"
linkedlist = "allow"
macro_use_imports = "allow"
manual_assert = "allow"
manual_instant_elapsed = "allow"
manual_is_power_of_two = "allow"
manual_is_variant_and = "allow"
manual_let_else = "allow"
manual_ok_or = "allow"
manual_string_new = "allow"
many_single_char_names = "allow"
map_unwrap_or = "allow"
match_on_vec_items = "allow"
match_wild_err_arm = "allow"
match_wildcard_for_single_variants = "allow"
maybe_infinite_iter = "allow"
mismatching_type_param_order = "allow"
missing_errors_doc = "allow"
missing_fields_in_debug = "allow"
missing_panics_doc = "allow"
mut_mut = "allow"
naive_bytecount = "allow"
needless_bitwise_bool = "allow"
needless_continue = "allow"
needless_for_each = "allow"
needless_pass_by_value = "allow"
needless_raw_string_hashes = "allow"
no_effect_underscore_binding = "allow"
no_mangle_with_rust_abi = "allow"
option_as_ref_cloned = "allow"
option_option = "allow"
ptr_as_ptr = "allow"
ptr_cast_constness = "allow"
pub_underscore_fields = "allow"
range_minus_one = "allow"
range_plus_one = "allow"
redundant_closure_for_method_calls = "allow"
redundant_else = "allow"
ref_as_ptr = "allow"
ref_binding_to_reference = "allow"
ref_option = "allow"
ref_option_ref = "allow"
return_self_not_must_use = "allow"
same_functions_in_if_condition = "allow"
semicolon_if_nothing_returned = "allow"
should_panic_without_expect = "allow"
single_char_pattern = "allow"
single_match_else = "allow"
stable_sort_primitive = "allow"
str_split_at_newline = "allow"
string_add_assign = "allow"
struct_excessive_bools = "allow"
struct_field_names = "allow"
too_many_lines = "allow"
transmute_ptr_to_ptr = "allow"
trivially_copy_pass_by_ref = "allow"
unchecked_duration_subtraction = "allow"
unicode_not_nfc = "allow"
unnecessary_box_returns = "allow"
unnecessary_join = "allow"
unnecessary_literal_bound = "allow"
unnecessary_wraps = "allow"
unnested_or_patterns = "allow"
unreadable_literal = "allow"
unsafe_derive_deserialize = "allow"
unused_async = "allow"
unused_self = "allow"
used_underscore_binding = "allow"
used_underscore_items = "allow"
verbose_bit_mask = "allow"
wildcard_imports = "allow"
zero_sized_map_values = "allow"
