[package]
name = "bitcoind-tests"
version = "0.1.0"
authors = ["sanket1729 <sanket1729@gmail.com>"]
edition = "2021"

[dependencies]
simfony = { path = ".." }
elementsd = { version = "0.8.0" }
actual-rand = { package = "rand", version = "0.8.4" }
secp256k1 = { version = "0.28.0", features = ["rand-std"] }
